# review

./: .gitignore  README.md
GPT-izza/: explore.ipynb
bjj_gpt/: run.py
bjj_gpt/notebooks/: doc_loader.ipynb  source_videos.ipynb  transcript_summaries.ipynb
bjj_gpt/notebooks/escapes-pins.faiss/: index.faiss  index.pkl
bjj_gpt/notebooks/leglocks.faiss/: index.faiss  index.pkl
bjj_gpt/notebooks/passing_halfguard.faiss/: index.faiss  index.pkl
bjj_gpt/transcripts/data/escapes-pins/: PillarsofDefense-PinEscapesbyGordonRyan1.mp4.mp3.txt  PillarsofDefense-PinEscapesbyGordonRyan2.mp4.mp3.txt  PillarsofDefense-PinEscapesbyGordonRyan3.mp4.mp3.txt  (+4 more)
deepgram/: client.py  notes.py  readme.md  run.py  tasks.py  test.py  test_client.py
fastapi-docker/: Dockerfile  readme.md
fastapi-docker/app/: run.py
fastapi-docker/tests/: test_run.py
langchain-bots/bots/bots/: discord.py  requirements.txt  slack.py  telegram.py
modal-whisper/: run.py
streaming-tests/: Untitled-1.ipynb  Untitled-2.ipynb  async_queue.py  fastapi_stream_whisper.py  main.py  requirements.txt  whisper_main.py  youtube.py
tailwind-components/: package-lock.json  package.json
tailwind-components/.actor/: actor.json
tailwind-components/src/: main.ts  parse.ipynb  routes.ts  tailwind.json
telegram-notes/app/: db.py  gpt.py  requirements.txt  run.py  schema.Prisma
telegram-whisper/: run.py
vercel-flask-telegrambot/: pyproject.toml
vercel-flask-telegrambot/app/: db.py  gpt.py  requirements.txt  run.py  vercel.json
video-summary/: run.py  text_helpers.py
(+38 files in other folders)
